--- a/.github/workflows/deploy-to-blob.yml
+++ b/.github/workflows/deploy-to-blob.yml
@@ -21,6 +21,7 @@ jobs:
               --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
               --destination '$web' \
               --source . \
+              --overwrite \
               --auth-mode key \
               --account-key ${{ secrets.AZURE_STORAGE_KEY }}
   
